--- a/c-punks/scss/style.scss
+++ b/c-punks/scss/style.scss
@@ -41,6 +41,10 @@ body {
   flex-direction: column;
   height: 100vh !important;
   overflow-y: hidden;
+
+  @media (max-width: 600px) {
+    height: 92vh !important;
+  }
 }
 
 header {
