--- a/c-punks/assets/css/style.css
+++ b/c-punks/assets/css/style.css
@@ -414,6 +414,7 @@ footer .contact {
       left: 4vw;
       top: 50vw; } }
   .slider__text h2 {
+    margin: 0 0 0 70px;
     font-size: 8rem; }
     @media (max-width: 1000px) {
       .slider__text h2 {
@@ -425,7 +426,8 @@ footer .contact {
       .slider__text h2 {
         font-size: 3.8rem; } }
   .slider__text h3 {
-    font-size: 8rem; }
+    font-size: 8rem;
+    margin: 0 0 0 110px; }
     @media (max-width: 1000px) {
       .slider__text h3 {
         font-size: 6rem; } }
@@ -442,7 +444,8 @@ footer .contact {
         font-size: 14px; } }
   .slider__text p {
     font-size: 54px;
-    line-height: 80px; }
+    line-height: 80px;
+    margin: 0 0 0 120px; }
     @media (max-width: 1340px) {
       .slider__text p {
         font-size: 44px;
@@ -606,10 +609,11 @@ footer .contact {
     .slider_Two__text {
       left: 4vw; } }
   .slider_Two__text h2 {
-    font-size: 8rem; }
+    font-size: 5rem;
+    margin: 0 0 0 70px; }
     @media (max-width: 1000px) {
       .slider_Two__text h2 {
-        font-size: 6rem; } }
+        font-size: 4rem; } }
     @media (max-width: 800px) {
       .slider_Two__text h2 {
         font-size: 4rem; } }
@@ -622,8 +626,9 @@ footer .contact {
       .slider_Two__text span {
         font-size: 14px; } }
   .slider_Two__text p {
-    font-size: 54px;
-    line-height: 80px; }
+    font-size: 34px;
+    line-height: 40px;
+    margin: 0 0 0 120px; }
     @media (max-width: 1340px) {
       .slider_Two__text p {
         font-size: 44px;
