--- a/c-punks/scss/style.scss
+++ b/c-punks/scss/style.scss
@@ -348,6 +348,7 @@ footer {
     }
 
     h2 {
+      margin: 0 0 0 70px;
       font-size: 8rem;
 
       @media (max-width: 1000px) {
@@ -365,6 +366,7 @@ footer {
 
     h3 {
       font-size: 8rem;
+      margin: 0 0 0 110px;
 
       @media (max-width: 1000px) {
         font-size: 6rem;
@@ -390,6 +392,7 @@ footer {
     p {
       font-size: 54px;
       line-height: 80px;
+      margin: 0 0 0 120px;
 
       @media (max-width: 1340px) {
         font-size: 44px;
@@ -574,10 +577,11 @@ footer {
     }
 
     h2 {
-      font-size: 8rem;
+      font-size: 5rem;
+      margin: 0 0 0 70px;
 
       @media (max-width: 1000px) {
-        font-size: 6rem;
+        font-size: 4rem;
       }
 
       @media (max-width: 800px) {
@@ -598,8 +602,9 @@ footer {
     }
 
     p {
-      font-size: 54px;
-      line-height: 80px;
+      font-size: 34px;
+      line-height: 40px;
+      margin: 0 0 0 120px;
 
       @media (max-width: 1340px) {
         font-size: 44px;
