--- a/c-punks/scss/style.scss
+++ b/c-punks/scss/style.scss
@@ -353,6 +353,7 @@ footer {
 
       @media (max-width: 1000px) {
         font-size: 6rem;
+        margin: 0;
       }
 
       @media (max-width: 800px) {
@@ -370,6 +371,7 @@ footer {
 
       @media (max-width: 1000px) {
         font-size: 6rem;
+        margin: 0;
       }
 
       @media (max-width: 800px) {
@@ -397,6 +399,7 @@ footer {
       @media (max-width: 1340px) {
         font-size: 44px;
         line-height: 54px;
+        margin: 0;
       }
 
       @media (max-width: 1340px) {
@@ -582,6 +585,7 @@ footer {
 
       @media (max-width: 1000px) {
         font-size: 4rem;
+        margin: 0;
       }
 
       @media (max-width: 800px) {
@@ -609,6 +613,7 @@ footer {
       @media (max-width: 1340px) {
         font-size: 44px;
         line-height: 54px;
+        margin: 0;
       }
 
       @media (max-width: 1340px) {
