--- a/c-punks/assets/css/style.css
+++ b/c-punks/assets/css/style.css
@@ -418,7 +418,8 @@ footer .contact {
     font-size: 8rem; }
     @media (max-width: 1000px) {
       .slider__text h2 {
-        font-size: 6rem; } }
+        font-size: 6rem;
+        margin: 0; } }
     @media (max-width: 800px) {
       .slider__text h2 {
         font-size: 4rem; } }
@@ -430,7 +431,8 @@ footer .contact {
     margin: 0 0 0 110px; }
     @media (max-width: 1000px) {
       .slider__text h3 {
-        font-size: 6rem; } }
+        font-size: 6rem;
+        margin: 0; } }
     @media (max-width: 800px) {
       .slider__text h3 {
         font-size: 4rem; } }
@@ -449,7 +451,8 @@ footer .contact {
     @media (max-width: 1340px) {
       .slider__text p {
         font-size: 44px;
-        line-height: 54px; } }
+        line-height: 54px;
+        margin: 0; } }
     @media (max-width: 1340px) {
       .slider__text p {
         font-size: 34px;
@@ -613,7 +616,8 @@ footer .contact {
     margin: 0 0 0 70px; }
     @media (max-width: 1000px) {
       .slider_Two__text h2 {
-        font-size: 4rem; } }
+        font-size: 4rem;
+        margin: 0; } }
     @media (max-width: 800px) {
       .slider_Two__text h2 {
         font-size: 4rem; } }
@@ -632,7 +636,8 @@ footer .contact {
     @media (max-width: 1340px) {
       .slider_Two__text p {
         font-size: 44px;
-        line-height: 54px; } }
+        line-height: 54px;
+        margin: 0; } }
     @media (max-width: 1340px) {
       .slider_Two__text p {
         font-size: 34px;
