--- a/faberlick/assets/css/style.css
+++ b/faberlick/assets/css/style.css
@@ -365,6 +365,11 @@ button p {
   font-size: 36px;
   transition: all 0.3s ease-out;
 }
+@media (max-width: 1920px) {
+  button p {
+    font-size: 28px;
+  }
+}
 @media (max-width: 475px) {
   button p {
     font-size: 10px;
@@ -425,6 +430,11 @@ h3 {
 h2 {
   font-size: 72px;
 }
+@media (max-width: 1920px) {
+  h2 {
+    font-size: 55px;
+  }
+}
 @media (max-width: 475px) {
   h2 {
     font-size: 20px;
@@ -434,6 +444,11 @@ h2 {
 h3 {
   font-size: 48px;
 }
+@media (max-width: 1920px) {
+  h3 {
+    font-size: 36px;
+  }
+}
 @media (max-width: 475px) {
   h3 {
     font-size: 16px;
@@ -442,6 +457,11 @@ h3 {
 
 p {
   font-size: 36px;
+}
+@media (max-width: 1920px) {
+  p {
+    font-size: 28px;
+  }
 }
 @media (max-width: 475px) {
   p {
@@ -458,6 +478,22 @@ header nav {
 header nav p {
   font-size: 20px;
   font-weight: 300;
+}
+@media (max-width: 1920px) {
+  header nav p {
+    font-size: 0.9vw;
+  }
+}
+@media (max-width: 1480px) {
+  header nav p {
+    font-size: 0.8vw;
+  }
+}
+@media (max-width: 1920px) {
+  header nav .logo {
+    padding: 0 5px;
+    max-width: 20%;
+  }
 }
 @media (max-width: 475px) {
   header nav .logo {
@@ -481,15 +517,17 @@ header nav ul.links li {
   border: 3px solid transparent;
   padding: 5px;
 }
+@media (max-width: 1300px) {
+  header nav ul.links li {
+    margin: 0 2px;
+    border: 2px solid transparent;
+    padding: 2px;
+  }
+}
 header nav .toggle-button {
   width: 30px;
   z-index: 36;
   display: none;
-}
-@media (max-width: 1715px) {
-  header nav .toggle-button {
-    display: block;
-  }
 }
 header nav .toggle-button .slise {
   height: 4px;
@@ -510,38 +548,9 @@ header nav .toggle-button .slise.active:nth-child(3) {
 header nav .navigation li:hover {
   border: 3px solid #00aca0;
 }
-@media (max-width: 1715px) {
-  header nav .navigation {
-    width: 100vw;
-    height: 100vh;
-    background: #fff;
-    position: absolute;
-    top: -110vh;
-    left: 0;
-    transition: all 0.5s ease-out;
-  }
-  header nav .navigation.active {
-    top: 0;
-  }
-  header nav .navigation ul.links {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-  }
-  header nav .navigation ul.links li {
-    margin: 0 5px;
-    border: 3px solid transparent;
-    padding: 5px;
-  }
-  header nav .navigation ul.links li a p {
-    font-size: 4vw;
-  }
-  header nav .navigation ul.links li:hover {
-    border: 3px solid #00aca0;
+@media (max-width: 1300px) {
+  header nav .navigation li:hover {
+    border: 2px solid #00aca0;
   }
 }
 header nav .social-navigation ul.links li {
@@ -554,10 +563,21 @@ header nav .social-navigation ul.links li {
   align-items: center;
   transition: all 0.5s ease-out;
 }
-@media (max-width: 475px) {
+@media (max-width: 1920px) {
+  header nav .social-navigation ul.links li {
+    min-width: 24px;
+    min-height: 24px;
+  }
+}
+@media (max-width: 1300px) {
   header nav .social-navigation ul.links li {
     min-width: 20px;
     min-height: 20px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 475px) {
+  header nav .social-navigation ul.links li {
     font-size: 10px;
   }
 }
@@ -581,11 +601,6 @@ main section#main {
 main section#main .container {
   display: flex;
 }
-@media (max-width: 1024px) {
-  main section#main .container {
-    flex-direction: column-reverse;
-  }
-}
 @media (max-width: 475px) {
   main section#main .container {
     flex-direction: row;
@@ -606,9 +621,14 @@ main section#main .container .part:last-child {
   padding: 350px 0 0 150px;
   text-align: center;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1920px) {
   main section#main .container .part:last-child {
-    padding: 250px 0;
+    padding: 200px 0 0 150px;
+  }
+}
+@media (max-width: 1480px) {
+  main section#main .container .part:last-child {
+    padding: 100px 0 0 100px;
   }
 }
 @media (max-width: 475px) {
@@ -624,6 +644,11 @@ main section#main .container .part:last-child h1 {
   font-size: 48px;
   font-weight: 200;
   padding: 50px 0;
+}
+@media (max-width: 1920px) {
+  main section#main .container .part:last-child h1 {
+    font-size: 36px;
+  }
 }
 @media (max-width: 475px) {
   main section#main .container .part:last-child h1 {
@@ -687,6 +712,11 @@ main section#about_company .container .part:last-child button p {
 main section#quality_standards {
   padding: 100px 0;
   text-align: center;
+}
+@media (max-width: 1024px) {
+  main section#quality_standards {
+    padding: 50px 0;
+  }
 }
 @media (max-width: 475px) {
   main section#quality_standards {
@@ -810,11 +840,6 @@ main section#trust_us .container {
 main section#trust_us .trust-us-item-wrapper {
   display: flex;
 }
-@media (max-width: 1024px) {
-  main section#trust_us .trust-us-item-wrapper {
-    flex-direction: column;
-  }
-}
 @media (max-width: 475px) {
   main section#trust_us .trust-us-item-wrapper {
     flex-direction: row;
@@ -822,11 +847,6 @@ main section#trust_us .trust-us-item-wrapper {
 }
 main section#trust_us .trust-us-item-wrapper .part {
   width: 50%;
-}
-@media (max-width: 1024px) {
-  main section#trust_us .trust-us-item-wrapper .part {
-    width: 100%;
-  }
 }
 main section#trust_us .trust-us-item-wrapper .part .trust-us-item {
   display: flex;
@@ -846,6 +866,11 @@ main section#trust_us .trust-us-item-wrapper .part .trust-us-item p span {
   font-weight: bold;
   color: #656565;
 }
+@media (max-width: 1024px) {
+  main section#trust_us .trust-us-item-wrapper .part .trust-us-item p {
+    font-size: 24px;
+  }
+}
 @media (max-width: 475px) {
   main section#trust_us .trust-us-item-wrapper .part .trust-us-item p {
     font-size: 12px;
@@ -860,6 +885,11 @@ main section#trust_us .trust-us-item-wrapper .part .trust-us-item span.bold-numb
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (max-width: 1024px) {
+  main section#trust_us .trust-us-item-wrapper .part .trust-us-item span.bold-number {
+    font-size: 160px;
+  }
 }
 @media (max-width: 475px) {
   main section#trust_us .trust-us-item-wrapper .part .trust-us-item span.bold-number {
@@ -885,6 +915,11 @@ main .thirth-bg {
 }
 main section#expert_reviews {
   padding: 100px 0;
+}
+@media (max-width: 1024px) {
+  main section#expert_reviews {
+    padding: 50px 0;
+  }
 }
 @media (max-width: 475px) {
   main section#expert_reviews {
@@ -940,6 +975,11 @@ main section#expert_reviews .expert-review-item-wrapper .expert-review-item h3 {
   color: #fff;
   font-size: 36px;
 }
+@media (max-width: 1024px) {
+  main section#expert_reviews .expert-review-item-wrapper .expert-review-item h3 {
+    font-size: 24px;
+  }
+}
 @media (max-width: 475px) {
   main section#expert_reviews .expert-review-item-wrapper .expert-review-item h3 {
     font-size: 14px;
@@ -949,6 +989,11 @@ main section#expert_reviews .expert-review-item-wrapper .expert-review-item p {
   text-align: center;
   font-size: 28px;
   color: #656565;
+}
+@media (max-width: 1024px) {
+  main section#expert_reviews .expert-review-item-wrapper .expert-review-item p {
+    font-size: 18px;
+  }
 }
 @media (max-width: 475px) {
   main section#expert_reviews .expert-review-item-wrapper .expert-review-item p {
@@ -960,6 +1005,11 @@ main section#expert_reviews .expert-review-item-wrapper .expert-review-item img 
 }
 main section#registration {
   padding: 100px 0;
+}
+@media (max-width: 1024px) {
+  main section#registration {
+    padding: 50px 0;
+  }
 }
 @media (max-width: 475px) {
   main section#registration {
@@ -1123,6 +1173,11 @@ main section#registration .registration-info-wrapper .part h3 {
 main section#events_reviews {
   padding: 100px 0;
 }
+@media (max-width: 1024px) {
+  main section#events_reviews {
+    padding: 50px 0;
+  }
+}
 @media (max-width: 475px) {
   main section#events_reviews {
     padding: 30px 0;
@@ -1139,11 +1194,6 @@ main section#events_reviews .container .events-item-wrapper {
   justify-content: space-between;
   width: 100%;
 }
-@media (max-width: 1024px) {
-  main section#events_reviews .container .events-item-wrapper {
-    flex-direction: column;
-  }
-}
 @media (max-width: 475px) {
   main section#events_reviews .container .events-item-wrapper {
     flex-direction: row;
@@ -1158,11 +1208,6 @@ main section#events_reviews .container .events-item-wrapper .event-wrap {
   width: 33.333%;
 }
 @media (max-width: 1024px) {
-  main section#events_reviews .container .events-item-wrapper .event-wrap {
-    width: 100%;
-  }
-}
-@media (max-width: 475px) {
   main section#events_reviews .container .events-item-wrapper .event-wrap {
     width: 50%;
   }
@@ -1181,12 +1226,15 @@ main section#events_reviews .container .events-item-wrapper .event-wrap:nth-chil
 @media (max-width: 1024px) {
   main section#events_reviews .container .events-item-wrapper .event-wrap:nth-child(3) {
     padding: 30px 0;
+    width: 100%;
+    display: flex;
+  }
+  main section#events_reviews .container .events-item-wrapper .event-wrap:nth-child(3) .event-item {
+    width: 50%;
   }
 }
 @media (max-width: 475px) {
   main section#events_reviews .container .events-item-wrapper .event-wrap:nth-child(3) {
-    display: flex;
-    width: 100%;
     padding: 0;
   }
   main section#events_reviews .container .events-item-wrapper .event-wrap:nth-child(3) .event-item {
@@ -1224,11 +1272,6 @@ main section#catalog .catalog-part-wrapper {
   width: 90%;
   margin: auto;
 }
-@media (max-width: 1024px) {
-  main section#catalog .catalog-part-wrapper {
-    flex-direction: column;
-  }
-}
 main section#catalog .catalog-part-wrapper .part {
   width: 45%;
 }
@@ -1240,6 +1283,16 @@ main section#catalog .catalog-part-wrapper .part {
 main section#catalog .catalog-part-wrapper .part h2 {
   font-size: 72px;
 }
+@media (max-width: 1920px) {
+  main section#catalog .catalog-part-wrapper .part h2 {
+    font-size: 56px;
+  }
+}
+@media (max-width: 1024px) {
+  main section#catalog .catalog-part-wrapper .part h2 {
+    font-size: 38px;
+  }
+}
 @media (max-width: 475px) {
   main section#catalog .catalog-part-wrapper .part h2 {
     font-size: 24px;
@@ -1249,6 +1302,16 @@ main section#catalog .catalog-part-wrapper .part p {
   font-size: 46px;
   padding: 40px 0;
   color: #656565;
+}
+@media (max-width: 1920px) {
+  main section#catalog .catalog-part-wrapper .part p {
+    font-size: 34px;
+  }
+}
+@media (max-width: 1024px) {
+  main section#catalog .catalog-part-wrapper .part p {
+    font-size: 24px;
+  }
 }
 @media (max-width: 475px) {
   main section#catalog .catalog-part-wrapper .part p {
@@ -1263,6 +1326,11 @@ main section#catalog .catalog-part-wrapper .part button p {
 footer {
   padding: 150px 0 430px 0;
   background: url("../images/bg-folder/footer-bg.png") no-repeat center top/cover;
+}
+@media (max-width: 1024px) {
+  footer {
+    padding: 100px 0;
+  }
 }
 @media (max-width: 475px) {
   footer {
@@ -1280,24 +1348,17 @@ footer .container .logo {
 }
 footer .container .footer-item-wrapper {
   display: flex;
-  justify-content: space-around;
   justify-content: flex-end;
   width: 100%;
   margin: auto;
 }
-@media (max-width: 1400px) {
+@media (max-width: 1024px) {
   footer .container .footer-item-wrapper {
-    flex-direction: column;
+    justify-content: space-between;
   }
 }
 footer .container .footer-item-wrapper .footer-item {
   width: 30%;
-}
-@media (max-width: 1500px) {
-  footer .container .footer-item-wrapper .footer-item {
-    width: 100%;
-    padding: 30px 0;
-  }
 }
 footer .container .footer-item-wrapper .footer-item h3 {
   color: #00aca0;
@@ -1306,6 +1367,11 @@ footer .container .footer-item-wrapper .footer-item h3 {
 footer .container .footer-item-wrapper .footer-item ul li {
   font-size: 28px;
   color: #656565;
+}
+@media (max-width: 1024px) {
+  footer .container .footer-item-wrapper .footer-item ul li {
+    font-size: 20px;
+  }
 }
 @media (max-width: 475px) {
   footer .container .footer-item-wrapper .footer-item ul li {
